--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
       <meta charset="utf-8">
@@ -10,9 +10,9 @@
       <link rel="icon" href="../../favicon.ico">
       <title>Eric Hebel's Resume</title>
       <!-- Bootstrap core CSS -->
-      <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="bootstrap.min.css" rel="stylesheet">
       <!-- Custom styles for this template -->
-      <link href="css/main.css" rel="stylesheet">
+      <link href="main.css" rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
       <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
