--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="container">
                    <div id="experience">
                       <h1>Experience</h1>
-                      <div class="dates">9/15-Present <br /> 6 Months</div>
+                      <div class="dates">9/15-3/16 <br /> 6 Months</div>
                           <div class="job">
                             <h4 class="title">VooDoo BBQ <br /> Key Holder/ Shift Leader</h4>
                                   <p>Open and close the store. Check other associates out at end of shift. Taking Deposits to the bank, close/count/set-up Cash drawers. <br />
