--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
       <meta charset="utf-8">
@@ -47,25 +47,21 @@
             </div><!-- navbar container -->
       </nav>
       <!-- main body -->
-      <div class="row">
-          <div class="col-md-3">
-              <div class="container">
-                  <div id="profile">
-                      <h3>Name:</h3>
-                      <p>Eric Hebel</p>
-                      <h3>Address:</h3>
-                      <p>11199 Lakeview dr <br />Coral Springs, FL.<br />33071</p>
-                      <h3>Phone:</h3>
-                      <p>954-290-9906</p>
-                      <h3>Email:</h3>
-                      <p>jargan76@gmail.com</p>
-                      <h3>Website:</h3>
-                      <p>WWW.EricHebel.info</p>
-                  </div> <!-- profile -->
-              </div> <!-- col-3 container-->
-          </div> <!--col-md-3 -->
-          <div class="col-md-5">
-                <div class="container">
+      <aside>
+          <div id="profile">
+               <h3>Name:</h3>
+              <p>Eric Hebel</p>
+              <h3>Address:</h3>
+              <p>11199 Lakeview dr <br />Coral Springs, FL.<br />33071</p>
+              <h3>Phone:</h3>
+              <p>954-290-9906</p>
+              <h3>Email:</h3>
+              <p>jargan76@gmail.com</p>
+              <h3>Website:</h3>
+              <p>WWW.EricHebel.info</p>
+           </div> <!-- profile -->
+       </aside>
+          <content>
                    <div id="experience">
                       <h1>Experience</h1>
                       <div class="dates">9/15-Present <br /> 1 Month</div>
@@ -122,9 +118,7 @@
                                       2005 Store manager selected Store Manager of the Year.</p>
                         </div> <!-- jobs UA  -->
                    </div> <!-- experience -->
-                 </div> <!-- /container -->
-          </div> <!-- col-md-5 -->
-      </div> <!-- row -->
+          </content>>
       <!-- start of Education Table -->
               <div id="education">
                     <div class="row">
@@ -202,7 +196,7 @@
           ================================================== -->
           <!-- Placed at the end of the document so the pages load faster -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-          <script src="js/bootstrap.min.js"></script>
+          <script src="bootstrap.min.js"></script>
           <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
           <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
