--- a/index.html
+++ b/index.html
@@ -68,9 +68,31 @@
                 <div class="container">
                    <div id="experience">
                       <h1>Experience</h1>
+
+                      <div class="dates">Location: Davie, Fl <br />
+                                                          3/16-Present <br />
+                                                          1 month<br />
+                                                          Phone: 954-306-6191
+                        </div>
+                          <div class="job">
+                            <h4 class="title"><a href='http://www.twinpeaksrestaurant.com/locations/davie/' target="_blank">Twin Peaks</a> <br /> Line Cook</h4>
+
+                                  <p>I am curently working full time running<br />
+                                   one of these three line stations.
+                                        <ul>
+                                            <li>Fry station </li>
+                                            <li>Salad Station</li>
+                                            <li>Window Station</li>
+                                        </ul>
+                                    Plan to learn more stations as time goes by.
+                                    </p>
+                                   <p> <span class="success"></span><br />
+                                   </p>
+                          </div> <!-- jobs Twin Peaks-->
+                            <hr />
                       <div class="dates">9/15-3/16 <br /> 6 Months</div>
                           <div class="job">
-                            <h4 class="title">VooDoo BBQ <br /> Key Holder/ Shift Leader</h4>
+                            <h4 class="title"><a href='http://www.voodoobbqandgrill.com/home' target='_blank'>VooDoo BBQ</a> <br /> Key Holder/ Shift Leader</h4>
                                   <p>Open and close the store. Check other associates out at end of shift. Taking Deposits to the bank, close/count/set-up Cash drawers. <br />
                                         Handel any issue with the guest satifaction, while GM is unavaliable.  </p>
                                    <p> <span class="success">Successes: Met Don King!</span><br />
@@ -79,7 +101,7 @@
                               <hr />
                       <div class="dates">2/10-10/13 <br />3 Years 8 Months</div>
                          <div class="job">
-                            <h4 class="title">Evolution Revolution DBA Elevation Burger <br />General Manager</h4>
+                            <h4 class="title">Evolution Revolution DBA <a href='http://elevationburger.com/' target='_blank'>Elevation Burger</a> <br />General Manager</h4>
                                 <p>Managed and directed all the important matters related to the business – <br />
                                       Paid attention to uphold the corporate standars. Made selection, and recruitment of <br />
                                       the employees in coordination with human resources and division manager. </p>
@@ -93,7 +115,7 @@
                             <hr />
                       <div class="dates">6/08-1/10 <br />1 Year 7 Months</div>
                         <div class="job">
-                           <h4 class="title">Waffle House <br />Unit Manager #1828, #1863, #926</h4>
+                           <h4 class="title"><a href='http://www.wafflehouse.com/' target=''>Waffle House</a> <br />Unit Manager #1828, #1863, #926</h4>
                               <p>Handled all aspects of the store. Staffing, schedules, Hiring and firing. <br />
                               Handling of cash, Deposits, Drawer change, safe Ordering and Payment to vendors. <br />
                               "Waffle House pays everything with cash."</p>
@@ -108,7 +130,7 @@
                             <hr />
                       <div class="dates">3/02-2/07 <br />4 Years 11 Months</div>
                         <div class="job">
-                           <h4 class="title">Uniform Advantage<br />Store Manager - #23 ,#11</h4>
+                           <h4 class="title"><a href='http://www.uniformadvantage.com/' target=''>Uniform Advantage</a><br />Store Manager - #23 ,#11</h4>
                               <p>Handled all aspects of the store. Staffing, schedules, Hiring and firing. Handling of cash, <br />
                               Deposits, Drawer change. Calling in Daily numbers to Corporate Office.<br />
                                Implemented company required merchandising program.</p>
@@ -191,7 +213,7 @@
           ================================================== -->
           <!-- Placed at the end of the document so the pages load faster -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-          <script src="js/bootstrap.min.js"></script>
+          <script src="bootstrap.min.js"></script>
           <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
           <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
