--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-      <meta name="description" content="Resume for Eric Hebel *New 2015 Edition*">
+      <meta name="description" content="Resume for Eric Hebel *New 2016 Edition*">
       <meta name="author" content="Eric Hebel aka Jargan76">
       <link rel="icon" href="../../favicon.ico">
       <title>Eric Hebel's Resume</title>
@@ -14,7 +14,7 @@
       <!-- Custom styles for this template -->
       <link href="css/main.css" rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
-      <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+      <script src="http:getbootstrap/assets/js/ie-emulation-modes-warning.js"></script>
 
       <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
       <!--[if lt IE 9]>
@@ -213,8 +213,11 @@
           ================================================== -->
           <!-- Placed at the end of the document so the pages load faster -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-          <script src="bootstrap.min.js"></script>
+          <script src="js/bootstrap.min.js"></script>
           <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-          <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+          <script src="http://getbootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+          <!-- Main JavaScript
+          ================================================== -->
+          <script src='js/main.js'></script>
   </body>
   </html>
