--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 </head>
 <body>
           <!-- navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top" >
+
+    <nav class="navbar navbar-default navbar-fixed-top" >
             <div class="container">
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -44,26 +45,25 @@
                 </ul>
               </div><!--navbar navbar-collapse -->
             </div><!-- navbar container -->
-  </nav>
-      <!-- main body -->
+    </nav>
+   <!-- main body -->
   <div class="row"  id="profile">
-          <div class="col-md-12">
-              <div class="container">
-                  <div>
-                      <h3>Name: <span id="name">Eric Hebel</span></h3>
-                      <h3>Address: <span id="aDress">11199 Lakeview dr. <br />Coral Springs, FL. 33071</span></h3>
-                      <h3>Phone: <span id="pNum">954-290-9906</span></h3>
-                      <h3>Email: <span id="myEmail">jargan76@gmail.com</span></h3>
-                      <h3>Website: <span id="mySite">WWW.EricHebel.info</span></h3>
-                  </div>
-              </div> <!-- col-3 container-->
-          </div> <!--col-md-3 -->
+          <div class="col-xs-12">
+             <h3>Name: <span id="name">Eric Hebel</span></h3>
+             <h3>Address: <span id="aDress">11199 Lakeview dr. <br />Coral Springs, FL. 33071</span></h3>
+             <h3>Phone: <span id="pNum">954-290-9906</span></h3>
+             <h3>Email: <span id="myEmail">jargan76@gmail.com</span></h3>
+             <h3>Website: <span id="mySite">WWW.EricHebel.info</span></h3>
+          </div> <!--col-xs-12 -->
   </div> <!-- row - profile -->
 <div class="container" id="experience" >
         <h1>Experience</h1>
         <hr /> <!-- Twin Peaks -->
     <div class="row">
-         <div class="companyName"><a href='http://www.twinpeaksrestaurant.com/locations/davie/' target="_blank">Twin Peaks</a>
+         <div class="companyName">
+            <button class="btn btn-info">
+                <a href='http://www.twinpeaksrestaurant.com/locations/davie/' target="_blank">Twin Peaks</a>
+            </button>
          </div> <!-- companyName -->
           <div class="col-xs-3">
             <div class="dates">
@@ -88,7 +88,11 @@
     </div> <!-- row -->
         <hr /> <!--Voo Doo -->
     <div class="row">
-           <div class="companyName"><a href='http://www.voodoobbqandgrill.com/home' target='_blank'>VooDoo BBQ</a> </div>
+           <div class="companyName">
+                <button class="btn btn-info">
+                  <a href='http://www.voodoobbqandgrill.com/home' target='_blank'>VooDoo BBQ</a>
+               </button>
+           </div>
            <div class="col-xs-3">
             <div class="dates">
               <p>Location: Boca Raton, Fl<br />
@@ -110,7 +114,11 @@
     </div> <!-- row -->
         <hr />  <!-- Elevation -->
     <div class="row">
-           <div class="companyName"> <a href='http://elevationburger.com/' target='_blank'>Elevation Burger</a></div>
+           <div class="companyName">
+              <button class="btn btn-info">
+                 <a href='http://elevationburger.com/' target='_blank'>Elevation Burger</a>
+              </button>
+           </div>
            <div class="col-xs-3">
             <div class="dates">
               <p>Location: Coral Springs, Fl<br />
@@ -137,7 +145,11 @@
     </div> <!-- row -->
         <hr /> <!-- Waffle  -->
     <div class="row">
-           <div class="companyName"><a href='http://www.wafflehouse.com/' target=''>Waffle House</a></div>
+           <div class="companyName">
+              <button class="btn btn-info">
+                <a href='http://www.wafflehouse.com/' target=''>Waffle House</a>
+              </button>
+           </div>
            <div class="col-xs-3">
              <div class="dates">
                 <p>Location: #1828, #1863, #926 SC<br />
@@ -165,7 +177,11 @@
     </div> <!-- row -->
         <hr />  <!-- UA -->
     <div class="row">
-           <div class="companyName"><a href='http://www.uniformadvantage.com/' target='._blank'>Uniform Advantage</a></div>
+           <div class="companyName">
+              <button class="btn btn-info">
+                <a href='http://www.uniformadvantage.com/' target='._blank'>Uniform Advantage</a>
+              </button>
+           </div>
            <div class="col-xs-3">
             <div class="dates">
               <p>Location: #23 SC, #11 GA<br />
@@ -210,13 +226,13 @@
               <tbody>
                    <tr>
                      <td>1990-1994</td>
-                     <td>Saluda High School</td>
+                     <td><a href="http://www.saludaschools.org/">Saluda High School</a> </td>
                      <td>High School Diploma</td>
                     <td>Yes</td>
                    </tr>
                    <tr>
                      <td>1999-2002</td>
-                     <td>Piedmont Techincal College</td>
+                     <td><a href="http://www.ptc.edu/academics/degrees-diplomas-certificates/associate-degree/aas-major-in-computer-technology">  Piedmont Techincal College</a></td>
                      <td>Computer &amp; Information Science</td>
                      <td>No</td>
                   </tr>
@@ -304,6 +320,7 @@
               <p class="muted">Further reference info available upon request.</p>
           </div> <!--references container-->
       </div>
+
       <footer>
       <div class="row">
           <div class="col-xs-6">
