--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <link href="css/main.css" rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 
-
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
       <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -49,10 +49,10 @@
    <!-- main body -->
   <div class="row"  id="profile">
           <div class="col-xs-12">
-             <h3>Name: <span id="name">Eric Hebel</span></h3>
-             <h3>Address: <span id="aDress">11199 Lakeview dr. <br />Coral Springs, FL. 33071</span></h3>
-             <h3>Phone: <span id="pNum">954-290-9906</span></h3>
-             <h3>Email: <span id="myEmail">jargan76@gmail.com</span></h3>
+             <h3><name>Name: <span id="name">Eric Hebel</span></name></h3>
+             <h3><address>Address: <span id="aDress">11199 Lakeview dr. <br />Coral Springs, FL. 33071</span></address></h3>
+             <h3><phone> Phone: <span id="pNum">954-290-9906</span></phone></h3>
+             <h3><email> Email: <span id="myEmail">jargan76@gmail.com</span></email></h3>
              <h3>Website: <span id="mySite">WWW.EricHebel.info</span></h3>
           </div> <!--col-xs-12 -->
   </div> <!-- row - profile -->
@@ -162,15 +162,15 @@
            <div class="col-xs-9">
               <div class="job">
                <h4 class="title">Unit Manager </h4>
-                  <p>Handled all aspects of the store. Staffing, schedules, Hiring and firing. <br />
-                  Handling of cash, Deposits, Drawer change, safe Ordering and Payment to vendors. <br />
+                  <p>Handled all aspects of the store. Staffing, schedules, Hiring and firing.
+                  Handling of cash, Deposits, Drawer change, safe Ordering and Payment to vendors.
                  "Waffle House pays everything with cash."</p>
                  <p> <span class="success">Successes:</span><br />
-                      Graduated in the top three of my class at Waffle House University.<br />
-                     Received the WH Tops award 4 periods in a row for Highest Increase in sales.<br />
-                      Received the Wh Tops Award for lowest under target for period<br />
-                     Recognized for getting my store under target going from a +10.6% down to -1.7% in 3 weeks.<br />
-                      District Relief Duties: Getting numbers and helping with staffing from all stores in <br />
+                      Graduated in the top three of my class at Waffle House University.
+                     Received the WH Tops award 4 periods in a row for Highest Increase in sales.
+                      Received the Wh Tops Award for lowest under target for period
+                     Recognized for getting my store under target going from a +10.6% down to -1.7% in 3 weeks.
+                      District Relief Duties: Getting numbers and helping with staffing from all stores in
                       district and reporting them up line. </p>
               </div> <!-- jobs WaffleHouse -->
            </div> <!-- col-xs-9 -->
@@ -324,7 +324,7 @@
       <footer>
       <div class="row">
           <div class="col-xs-6">
-             <p>Created by: Jargan76Studios</p>
+             <p>Created by:  76 Studios</p>
           </div> <!-- col-12 -->
           <div class="col-xs-6">
             <p>GitHub: https://github.com/Jargan76  </p>
