--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
            <div class="col-xs-9">
                 <div class="job">
                             <h4 class="title"> Key Holder/ Shift Leader</h4>
-                                  <p>Open and close the store. Check other associates out at end of shift. Taking Deposits to the bank, close/count/set-up Cash drawers. <br />
+                                  <p>Open and close the store. Check other associates out at end of shift. Taking Deposits to the bank, close/count/set-up Cash drawers.
                                         Handel any issue with the guest satifaction, while GM is unavaliable.  </p>
-                                   <p class="success">Successes: Met Don King!<br />
+                                   <p > <span class="success">Successes:</span><br />
+                                                Met Don King!
                                    </p>
                           </div> <!-- jobs VooDoo BBQ-->
            </div>
@@ -131,13 +132,13 @@
            <div class="col-xs-9">
             <div class="job">
               <h4 class="title"> General Manager</h4>
-                  <p>Managed and directed all the important matters related to the business – <br />
-                        Paid attention to uphold the corporate standars. Made selection, and recruitment of <br />
+                  <p>Managed and directed all the important matters related to the business –
+                        Paid attention to uphold the corporate standars. Made selection, and recruitment of
                         the employees in coordination with human resources and division manager. </p>
                         <p> <span class="success">Successes:</span><br />
-                        Completed Elevation Burger course  at Corporate with a 92% final grade.<br />
-                        Traveled to local events to promote Elevation Burger.<br />
-                         Was number one in the district on P&amp;L, 7 months in a row.<br />
+                        Completed Elevation Burger course  at Corporate with a 92% final grade.
+                        Traveled to local events to promote Elevation Burger.
+                         Was number one in the district on P&amp;L, 7 months in a row.
                         Assisted the GM at the Plantation location with Inventories
                          </p>
             </div> <!-- jobs Elevation Burger -->
@@ -194,16 +195,16 @@
            <div class="col-xs-9">
             <div class="job">
                            <h4 class="title"><br />Store Manager - #23 ,#11</h4>
-                              <p>Handled all aspects of the store. Staffing, schedules, Hiring and firing. Handling of cash, <br />
-                              Deposits, Drawer change. Calling in Daily numbers to Corporate Office.<br />
+                              <p>Handled all aspects of the store. Staffing, schedules, Hiring and firing. Handling of cash,
+                              Deposits, Drawer change. Calling in Daily numbers to Corporate Office.
                                Implemented company required merchandising program.</p>
                                <p> <span class="success">Successes:</span><br />
-                                    Store ranked #2 company wide in Customer Service determined by monthly Mystery Shops. <br />
-                                    Under budget 2006 labor dollars. <br />
-                                    Consistently scored above associates company requirements for store mystery shops.<br />
-                                    Task Force Sales Associate Trainer Santa Rosa California Store #26.<br />
-                                     Two time bonus for personal quarterly sales increase of 10% or more per U.A. rewards program.<br />
-                                      2005 Store award for highest increase sales % in the company. <br />
+                                    Store ranked #2 company wide in Customer Service determined by monthly Mystery Shops.
+                                    Under budget 2006 labor dollars.
+                                    Consistently scored above associates company requirements for store mystery shops.
+                                    Task Force Sales Associate Trainer Santa Rosa California Store #26.
+                                     Two time bonus for personal quarterly sales increase of 10% or more per U.A. rewards program.
+                                      2005 Store award for highest increase sales % in the company.
                                       2005 Store manager selected Store Manager of the Year.</p>
                         </div> <!-- jobs UA  -->
            </div>
