--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <![endif]-->
 </head>
 <body>
+
           <!-- navbar -->
 
     <nav class="navbar navbar-default navbar-fixed-top" >
@@ -34,7 +35,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a href="#profile"><h2 class="navbar-name" > Eric Hebel</h2></a>
+                <a href="#objective"><h2 class="navbar-name" > Eric Hebel</h2></a>
               </div> <!-- navbar-header -->
               <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -47,14 +48,22 @@
             </div><!-- navbar container -->
     </nav>
    <!-- main body -->
+   <div class="container" id="objective">
+     <h2>Objective</h2>
+     <p>I am a self taught web developer, that loves to learn.
+          Because of life I have been working in restaurant and retail over the last 10+ years.</p>
+   </div>
   <div class="row"  id="profile">
-          <div class="col-xs-12">
+          <div class="col-xs-6" id='profilePic'>
+            <img src="images/Jargan76.png" alt="Eric Hebel" class="img-circle" />
+          </div>
+          <div class="col-xs-6" id="profileInfo">
              <h3><name>Name: <span id="name">Eric Hebel</span></name></h3>
              <h3><address>Address: <span id="aDress">11199 Lakeview dr. <br />Coral Springs, FL. 33071</span></address></h3>
              <h3><phone> Phone: <span id="pNum">954-290-9906</span></phone></h3>
              <h3><email> Email: <span id="myEmail">jargan76@gmail.com</span></email></h3>
-             <h3>Website: <span id="mySite">WWW.EricHebel.info</span></h3>
-          </div> <!--col-xs-12 -->
+           <!--  <h3>Website: <span id="mySite">WWW.EricHebel.info</span></h3> -->
+          </div> <!--col-xs-2 -->
   </div> <!-- row - profile -->
 <div class="container" id="experience" >
         <h1>Experience</h1>
@@ -180,7 +189,7 @@
     <div class="row">
            <div class="companyName">
               <button class="btn btn-info">
-                <a href='http://www.uniformadvantage.com/' target='._blank'>Uniform Advantage</a>
+                <a href='http://www.uniformadvantage.com/' target='._blank'>UA Brands</a>
               </button>
            </div>
            <div class="col-xs-3">
@@ -259,27 +268,27 @@
           </table>  <!-- table-striped -->
         </div> <!-- table-responsive -->
 </div> <!-- education container -->
+
             <div class="container">
               <div class="container" id="skills">
               <div class="row">
                   <h1>Skills</h1>
                   <div class="col-xs-4">
                           <ul>
-                            <li>html</li>
-                            <li>Express</li>
-                            <li></li>
+                            <li class="Skills" ><a href="http://jargan76.github.io/School-project/"><img src="" id="htmlSkill" alt="HTML"></li>
+                            <li class="Skills" ><a href=""><img src="" id="nodeJSSkill" alt="NodeJS"></a></li>
                           </ul>
                  </div>  <!-- col-xs-4  -->
                  <div class="col-xs-4">
                           <ul>
-                            <li>css</li>
-                            <li>JQuery</li>
+                            <li class="skills" ><a href="https://jargan76.github.io/SVG/house/house"><img src="" id="cssSkill" alt="CSS"></a></li>
+                            <li class="Skills" ><a href=""><img src="" id="gitSkill" alt="Git"></a></li>
                           </ul>
                  </div>  <!-- col-xs-4  -->
                  <div class="col-xs-4">
                           <ul>
-                            <li>javaScript</li>
-                            <li>Git</li>
+                            <li class="skills" ><a href="http://jargan76.github.io/ListEater/" ><img src="" id="jsSkill" alt="JS"></a></li>
+                            <li class="Skills" ><a href=""><img src="" id="expressSkill" alt="Express"></a></li>
                           </ul>
                  </div>  <!-- col-xs-4  -->
                 </div>
@@ -325,8 +334,11 @@
       <footer>
       <div class="row">
           <div class="col-xs-12">
-            <p>GitHub: https://github.com/Jargan76  </p>
-          </div>
+             <p>Learn more about me or my code</p>
+              <a href="https://github.com/Jargan76" target="_blank"><img src="images/github-icon.png" alt="GITHUB" id="github" / ></a>
+              <a href="https://www.linkedin.com/in/eric-hebel-b373b666"><img src="images/linkedin.png" id="linkedin" alt="linkedIn"></a>
+          </div> <!-- col-12 -->
+
       </div> <!-- row -->
       </footer>
           <!-- Bootstrap core JavaScript
