--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12">
              <p>Learn more about me or my code</p>
               <a href="https://github.com/Jargan76" target="_blank"><img src="images/github-icon.png" alt="GITHUB" id="github" / ></a>
-              <a href="https://www.linkedin.com/in/eric-hebel-b373b666"><img src="images/linkedin.png" id="linkedin" alt="linkedIn"></a>
+              <a href="https://www.linkedin.com/in/eric-hebel-b373b666" target="_blank"><img src="images/linkedin.png" id="linkedin" alt="linkedIn"></a>
           </div> <!-- col-12 -->
 
       </div> <!-- row -->
