--- a/index.html
+++ b/index.html
@@ -276,19 +276,19 @@
                   <div class="col-xs-4">
                           <ul>
                             <li class="Skills" ><a href="http://jargan76.github.io/School-project/" target="_blank" ><img src="" id="htmlSkill" alt="HTML"></li>
-                            <li class="Skills" ><a href="" target="_blank" ><img src="" id="nodeJSSkill" alt="NodeJS"></a></li>
+                            <li class="Skills" ><a href="comingSoon.html" target="_blank" ><img src="" id="nodeJSSkill" alt="NodeJS"></a></li>
                           </ul>
                  </div>  <!-- col-xs-4  -->
                  <div class="col-xs-4">
                           <ul>
                             <li class="skills" ><a href="https://jargan76.github.io/SVG/house/house" target="_blank" ><img src="" id="cssSkill" alt="CSS"></a></li>
-                            <li class="Skills" ><a href="" target="_blank" ><img src="" id="gitSkill" alt="Git"></a></li>
+                            <li class="Skills" ><a href="comingSoon.html" target="_blank" ><img src="" id="gitSkill" alt="Git"></a></li>
                           </ul>
                  </div>  <!-- col-xs-4  -->
                  <div class="col-xs-4">
                           <ul>
                             <li class="skills" ><a href="http://jargan76.github.io/ListEater/"  target="_blank" ><img src="" id="jsSkill" alt="JS"></a></li>
-                            <li class="Skills" ><a href="" target="_blank" ><img src="" id="expressSkill" alt="Express"></a></li>
+                            <li class="Skills" ><a href="comingSoon.html" target="_blank" ><img src="" id="expressSkill" alt="Express"></a></li>
                           </ul>
                  </div>  <!-- col-xs-4  -->
                 </div>
