--- a/comingSoon.html
+++ b/comingSoon.html
@@ -22,10 +22,10 @@
       <![endif]-->
 </head>
 <body>
-<div class="container">
-        <H1>A great example will be come to this location soon.</H1>
+<div class="container comingSoon">
+        <h1>A great example will come to this location soon.</h1>
 
-        <a href="index.html"><button class="btn btn-default" >Go Back</button></a>
+        <p><a href="index.html"><button id="tShirt" class="btn btn-default" >Go Back</button></a></p>
 </div>
 </body>
 </html>
