--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-      <meta name="description" content="Resume for Eric Hebel *New 2015 Edition*">
+      <meta name="description" content="*New 2016 Edition* This is Eric Hebel's personal resume site. ">
       <meta name="author" content="Eric Hebel aka Jargan76">
       <link rel="icon" href="../../favicon.ico">
       <title>Eric Hebel's Resume</title>
