More style changes
making the coming soon page look and function a little better

--- a/comingSoon.html
+++ b/comingSoon.html
@@ -6,7 +6,7 @@
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta name="description" content="Resume for Eric Hebel *New 2015 Edition*">
       <meta name="author" content="Eric Hebel aka Jargan76">
-      <link rel="icon" href="../../favicon.ico">
+      <link rel="icon" href="">
       <title>Coming Soon</title>
       <!-- Bootstrap core CSS -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
