--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
           </div>
           <div class="col-xs-9">
             <div class="job">
-                   <h4 class="title"> Line Cook</h4>
-                     <p>I am curently working full time. I work mostly on the Salad/Nacho Station.
-                              I also work Fry, Prep and Sell Window stations. I have opened and closed all of the stations mentioned.
+                   <h4 class="title"> Line Supervisor</h4>
+                     <p>I am curently working full time. I work the evening shift assisting wherever I am needed. 
+                           Complete Line checks and inventories daily.
                               The Davie Location is the busyiest Twin Peaks location in the entire company.
                      </p>
                       <p> <span class="success"></span><br />
